# ncmdump

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  aes.cpp  aes.h  base64.h  main.cpp  ncmcrypt.cpp  ncmcrypt.h  vcpkg.json  win32_init.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: autobuild.yml  homebrew.yml
cmake/: FindTaglib.cmake
example/csharp/: NeteaseCrypt.cs  Program.cs
src/: main.cpp  ncmcrypt.cpp
src/include/: aes.h  color.h  logger.hpp  ncmcrypt.h  platform.h  thread_pool.hpp  version.h
src/lib/: libncmdump.cpp  libncmdump.h
src/utils/: cJSON.cpp
taglib/: CMakeLists.txt  README.md  taglib-config.cmd.cmake
taglib/lib/pkgconfig/: taglib.pc  taglib_c.pc
taglib/taglib/: CMakeLists.txt  fileref.cpp  fileref.h
taglib/taglib/swig/: taglib.i
taglib/taglib/swig/swigout/: swig_taglib_wrap.cpp
test/: test.flac  test.ncm
